--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Moodleクイズレビュークリーナー",
-  "version": "1.0",
-  "description": "Moodleのクイズレビューページから特定の要素を削除します",
+  "version": "2.0",
+  "description": "Moodleのクイズレビューページから回答の表示・非表示を選択できます。",
   "permissions": [
     "activeTab",
     "scripting"
